# lfccbd-web

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.rst  pyproject.toml
core/: manage.py
core/accounts/: forms.py  service.py  urls.py  views.py
core/api/: api_router.py  urls.py  views.py
core/api/schemas/: contacts.py  posts.py  prayers.py  resources.py  testimonies.py
core/api/search/: api_searches.py
core/books/: apps.py
core/contacts/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
core/followup/: admin.py  apps.py  forms.py  signals.py  task.py  tasks.py  tests.py  urls.py  views.py
core/followup/models/: __choices.py  checkup.py  membership.py  outreach.py  sms.py  vercode.py
core/followup/utils/: twilio_sms.py
core/jinja2/: base.html
core/jinja2/accounts/: login.html
core/jinja2/error-pages/: 400.html  403.html  404.html  500.html  account-suspended.html  maintenance.html
core/jinja2/forms/: followup.html  outreach.html  prayer-request.html
core/jinja2/macros/: __audioplayer.html  __bookmodel.html  __testimonies.html  __videoplayer.html
core/jinja2/ministries/: children_ministry.html  chop_ministry.html  evangelism_ministry.html  followup_ministry.html  hospitality_ministry.html  ministries.html  sanctuary_ministry.html  sunday_ministry.html  wenesday_ministry.html  wofbi_ministry.html  wose_ministry.html  wsf_ministry.html  yaf_ministry.html
core/jinja2/pages/: about.html  contact.html  index.html
core/jinja2/partials/: __footer.html  __header.html  __media_players.html  __scroller.html
core/jinja2/partials/form/: __followup_checkup.html  __followup_outreach.html  __followup_sunday_first_timers.html  (+3 more)
core/jinja2/resources/: resources.html
core/jinja2/testimonies/: testimonies.html
core/pages/: tests.py  urls.py  views.py
core/post/: admin.py  apps.py  models.py
core/prayers/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
core/project/: urls.py
core/project/settings/: __init__.py  admin_template_config.py  api.py  base.py  development.py  general_security.py  production.py  utils_config.py
core/resources/: admin.py  apps.py  models.py  urls.py  views.py
core/resources/tests/: test_books.py  test_media.py
core/templates/admin/: base_site.html
core/testimonies/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
core/user/: admin.py  apps.py  models.py
(+16 files in other folders)
