[tool.poetry]
name = "core"
version = "0.1.0"
description = "LFC CBD official website"
authors = ["LFCCBD"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.19"
dotmap = "^1.3.30"
python-decouple = "^3.8"
django-split-settings = "^1.3.2"
django-cleanup = "^9.0.0"
sentry-sdk = { extras = ["django"], version = "^2.20.0" }
psycopg = "^3.2.4"
psycopg-binary = "^3.2.4"
django-cors-headers = "^4.6.0"
django-defender = "^0.9.8"
django-auto-logout = "^0.5.1"
django-csp = "^3.8"
django-simple-history = "^3.8.0"
django-autoslug = "^1.9.9"
jinja2 = "^3.1.5"
model-bakery = "^1.20.1"
django-maintenance-mode = "^0.21.1"
django-ninja = "^1.3.0"
django-pgcrypto = "^3.0.2"
gunicorn = "^23.0.0"
django-recaptcha = "^4.0.0"
nh3 = "^0.2.20"
django-daisy = "^1.0.9"
pillow = "^11.1.0"
django-prose-editor = "^0.10.3"
boto3 = "^1.36.22"
django-storages = "^1.14.5"
python-ffmpeg = "^2.0.12"
argon2-cffi = "^23.1.0"
django-otp = "^1.5.4"
qrcode = "^8.0"


[tool.poetry.group.dev.dependencies]
werkzeug = "^3.1.3"
django-debug-toolbar = "^5.0.1"
django-extensions = "^3.2.3"
types-bleach = "^6.2.0.20241123"
black = "^25.1.0"
pre-commit = "^4.1.0"

[tool.isort]
extend_skip_glob = ["migrations/*"]
skip_gitignore = true
profile = "black"
line_length = 119
multi_line_output = 3
include_trailing_comma = true
force_sort_within_sections = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
combine_as_imports = true
remove_redundant_aliases = true
lines_between_sections = 1

[tool.ruff]
line-length = 119
indent-width = 4
target-version = "py311"
exclude = [
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "node_modules",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "site-packages",
    "venv",
]


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
ignore = []
fixable = ["ALL"]
unfixable = ["B"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
